--- a/HY/html/community_s.html
+++ b/HY/html/community_s.html
@@ -18,7 +18,7 @@
       <div class="title">어서어선</div>
       <div id="nav">
         <ol class="left-side">
-          <li onClick="location.href='journal_add.html'">일지</li>
+          <li onClick="location.href='journal_main.html'">일지</li>
           <li onClick="location.href='community_s.html'">커뮤니티</li>
           <li onClick="location.href='mypage.html'">마이페이지</li>
         </ol>
