--- a/HY/html/journal_list.html
+++ b/HY/html/journal_list.html
@@ -17,7 +17,7 @@
       <div class="title">어서어선</div>
       <div id="nav">
         <ol class="left-side">
-          <li onClick="location.href='journal_add.html'">일지</li>
+          <li onClick="location.href='journal_main.html'">일지</li>
           <li onClick="location.href='community_s.html'">커뮤니티</li>
           <li onClick="location.href='mypage.html'">마이페이지</li>      
         </ol>
@@ -46,7 +46,7 @@
     </div>
 
 
-      <!-- 내용은 여기에 추가하면 됨 -->
+    <!-- 목록 -->
       <div class="total">
         <div class="content">
           <table>
@@ -89,22 +89,38 @@
           </table>
         </div>
         
-        <div class="right-content">
-          <div class="total-content">
-            <div class="detail-content">
-              <div class="element">운행 날짜</div>
-              <div class="element">운행 시간</div>
-              <div class="element">운행 거리</div>
-              <div class="element">특이 사항</div>
-            </div>
-            <div class="input-content">
-              <div class="input-element">07/19</div>
-              <div class="input-element">3시간</div>
-              <div class="input-element">90km</div>
-              <div class="input-element">재밌었다!</div>
-            </div>
+        <!-- 상세보기 -->
+        <div class="show">
+          <div class="jDate">
+            <p>운행 날짜</p>
+            <span>2022.07.19</span>
           </div>
+
+          <div class="clear"></div>
+
+          <div class="jTime">
+            <p>운행 시간</p>
+            <span>4시간</span>
+          </div>
+          
+          <div class="clear"></div>
+
+          <div class="jDistance">
+            <p>운행 거리</p>
+            <span>8km</span>
+          </div>
+
+          <div class="clear"></div>
+
+          <div class="jEtc">
+            <p>특이 사항</p>
+            <span>알찬항해였다. 알찬항해였다. 알찬항해였다. 알찬항해였다. 알찬항해였다. 알찬항해였다. </span>
+          </div>
+
+
+
         </div>
+
       </div>
 
 
