--- a/HY/html/mypage.html
+++ b/HY/html/mypage.html
@@ -6,7 +6,7 @@
     <link href="../public/css/font.css" rel="stylesheet" />
     <link href="../public/css/navbar.css" rel="stylesheet" />
     <link href="../public/css/sidebar.css" rel="stylesheet" />
-    <!-- <link href="../public/css/community.css" rel="stylesheet" /> -->
+    <link href="../public/css/mypage.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="title">어서어선</div>
       <div id="nav">
         <ol class="left-side">
-          <li onClick="location.href='journal_add.html'">일지</li>
+          <li onClick="location.href='journal_main.html'">일지</li>
           <li onClick="location.href='community_s.html'">커뮤니티</li>
           <li onClick="location.href='mypage.html'">마이페이지</li>
         </ol>
@@ -36,11 +36,47 @@
       />
     </div>
 
+    <div class="boxes">
+      <div class="box1">
+        <h1>정보수정</h1>
+        <p>이름</p>
+        <input id="name" type="text"required><br>
+        <div class="clear"></div>
+
+        <p>전화번호</p>
+        <input id="pNumber" type="text"required disabled><br>
+        <div class="clear"></div>
+
+        <p>비밀번호</p>
+        <input id="PW" type="text"required><br>
 
 
+        <button type="button">완료</button>
+      </div>
 
-    <div class="content">
+      <div class="box2">
+        <h1>비밀번호 변경</h1>
 
+        <p>이름</p>
+        <input id="name" type="text"required><br>
+        <div class="clear"></div>
+
+        <p>현재 비밀번호</p>
+        <input id="current" type="text"required ><br>
+        <div class="clear"></div>
+
+        <p>새로운 비밀번호</p>
+        <input id="new" type="text"required><br>
+        <div class="clear"></div>
+
+        <p>새로운 비밀번호(확인)</p>
+        <input id="check" type="text"required><br>
+
+        <button type="button">완료</button>
+
+      </div>
     </div>
+
+
   </body>
 </html>
