--- a/HY/html/journal_add.html
+++ b/HY/html/journal_add.html
@@ -6,6 +6,7 @@
     <link href="../public/css/font.css" rel="stylesheet"/>
     <link href="../public/css/navbar.css" rel="stylesheet" />
     <link href="../public/css/sidebar.css" rel="stylesheet" />
+    <link href="../public/css/journal_add.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -16,12 +17,12 @@
       <div class="title">어서어선</div>
       <div id="nav">
         <ol class="left-side">
-          <li onClick="location.href='journal_add.html'">일지</li>
+          <li onClick="location.href='journal_main.html'">일지</li>
           <li onClick="location.href='community_s.html'">커뮤니티</li>
           <li onClick="location.href='mypage.html'">마이페이지</li>      
         </ol>
         <ol class="right-side">
-          <li class="login">OOO님</li>
+          <li class="login"><strong>OOO님</strong></li>
           <li>로그아웃</li>
         </ol>
       </div>
@@ -45,7 +46,21 @@
     </div>
 
     <div class="content">
-      <!-- 내용은 여기에 추가하면 됨 -->
+
+      <p>운행 날짜 <b>*</b></p>
+      <input id="date" type="date"><br>
+
+      <p>운행 시간 <b>*</b></p>
+      <input id="time" type="text" placeholder="총 운행 시간을 입력하세요" required><br>
+
+      <p>운행 거리 <b>*</b></p>
+      <input id="distance" type="text" placeholder="총 운행 거리를 입력하세요" required><br>
+
+      <p>특이사항</p>
+      <div><textarea id="inputbox" cols="51" rows="5"></textarea></div>
+
+
+      <button type="button">등록</button>
 
     </div>
 
