--- a/FrontEnd/html/community_n.html
+++ b/FrontEnd/html/community_n.html
@@ -24,7 +24,7 @@
         </ol>
         <ol class="right-side">
           <li class="login"><b>OOO님</b></li>
-          <li>로그아웃</li>
+          <li class="logout">로그아웃</li>
         </ol>
       </div>
     </div>
@@ -56,62 +56,24 @@
           <h2>전라북도</h2>
           <h5>후기 게시판</h5>
         </figcaption>
-        <table>
-          <tr>
-            <td class="num">번호</td>
-            <td class="table-title">제목</td>
-            <td class="author">작성자</td>
-            <td class="count">조회수</td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-          <tr>
-            <td class="num"></td>
-            <td class="title"></td>
-            <td class="author"></td>
-            <td class="count"></td>
-          </tr>
-        </table>
+        <div class="tbBox">
+          <table class="myTable">
+            <tr>
+              <td class="num">번호</td>
+              <td class="table-title">제목</td>
+              <td class="author">작성자</td>
+              <td class="count">조회수</td>
+            </tr>
+            <!-- <tr>
+              <td class="num"></td>
+              <td class="title"></td>
+              <td class="author"></td>
+              <td class="count"></td>
+            </tr> -->
+
+          </table>
+        </div>
+
         <div class="bottom">
           <div class="arrow">
             <img src="/imgs/arrow_r.png"/>
@@ -124,5 +86,8 @@
         </div>
       </div>
     </div>
+
+    <script src="/js/logout.js"></script>
+    <script src="/js/community_s.js"></script>
   </body>
 </html>
