--- a/FrontEnd/html/journal_add.html
+++ b/FrontEnd/html/journal_add.html
@@ -23,7 +23,7 @@
         </ol>
         <ol class="right-side">
           <li class="login"><b>OOO님</b></li>
-          <li>로그아웃</li>
+          <li class="logout">로그아웃</li>
         </ol>
       </div>
     </div>
@@ -53,19 +53,19 @@
       <p>운행 시간 <b>*</b></p>
       <input id="time" type="text" placeholder="총 운행 시간을 입력하세요" required><br>
 
-      <p>운행 거리 <b>*</b></p>
-      <input id="distance" type="text" placeholder="총 운행 거리를 입력하세요" required><br>
+      <!-- <p>운행 거리 <b>*</b></p>
+      <input id="distance" type="text" placeholder="총 운행 거리를 입력하세요" required><br> -->
 
       <p>특이사항</p>
       <div><textarea id="inputbox" cols="51" rows="5"></textarea></div>
 
 
-      <button type="button">등록</button>
+      <button class="complete" type="button">등록</button>
 
     </div>
 
 
-    
-
+    <script src="/js/logout.js"></script>
+    <script src="/js/journal_add.js"></script>
   </body>
 </html>
