--- a/FrontEnd/html/mypage.html
+++ b/FrontEnd/html/mypage.html
@@ -24,7 +24,7 @@
         </ol>
         <ol class="right-side">
           <li class="login"><b>OOO님</b></li>
-          <li>로그아웃</li>
+          <li class="logout">로그아웃</li>
         </ol>
       </div>
     </div>
@@ -38,45 +38,26 @@
 
     <div class="boxes">
       <div class="box1">
-        <h1>정보수정</h1>
+        <h1>내 정보</h1>
         <p>이름</p>
-        <input id="name" type="text"required><br>
+        <input id="name" type="text"required disabled><br>
         <div class="clear"></div>
 
         <p>전화번호</p>
         <input id="pNumber" type="text"required disabled><br>
         <div class="clear"></div>
-
-        <p>비밀번호</p>
-        <input id="PW" type="text"required><br>
-
-
-        <button type="button">완료</button>
       </div>
 
       <div class="box2">
-        <h1>비밀번호 변경</h1>
 
-        <p>이름</p>
-        <input id="name" type="text"required><br>
-        <div class="clear"></div>
 
-        <p>현재 비밀번호</p>
-        <input id="current" type="text"required ><br>
-        <div class="clear"></div>
-
-        <p>새로운 비밀번호</p>
-        <input id="new" type="text"required><br>
-        <div class="clear"></div>
-
-        <p>새로운 비밀번호(확인)</p>
-        <input id="check" type="text"required><br>
-
-        <button type="button">완료</button>
+        <button type="button" class="editPW">비밀번호 변경</button>
+        <button type="button">탈퇴</button>
 
       </div>
     </div>
 
-
+    <script src="/js/logout.js"></script>
+    <script src="/js/mypage.js"></script>
   </body>
 </html>
