--- a/FrontEnd/html/main.html
+++ b/FrontEnd/html/main.html
@@ -4,14 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewpoint" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/navbar.css" />
-    <link rel="stylesheet" href="/css/fullPage.css" />
-    <link rel="stylesheet" href="/css/pretendard.css" />
+    <link
+      rel="stylesheet"
+      href="/css/navbar.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/css/fullPage.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/css/pretendard.css"
+    />
     <title>어서어선</title>
   </head>
   <body>
     <div id="header">
-      <div class="title"><img src="/imgs/mainLogo.png" /></div>
+      <img
+        src="/imgs/logo.png"
+      />
+      <div class="title">어서어선</div>
       <div id="nav">
         <ol class="left-side">
           <li>일지</li>
@@ -19,21 +31,32 @@
           <li>마이페이지</li>
         </ol>
         <ol class="right-side">
-          <li class="login" onClick="location.href='/login'">로그인</li>
-          <li onClick="location.href='/register'">회원가입</li>
+          <li class="login" onClick="location.href='/login'" >로그인</li>
+          <li onClick="location.href='/register'" >회원가입</li>
         </ol>
       </div>
     </div>
     <div class="well" id="well">
       <div class="panel">
-        <img src="/imgs/메인1.png" />
+        <!--
+        <div id="info">
+          <h1 class="title-1">어서어선</h1>
+          <h4 class="title-1">안전을 위한 탁월한 선택, 지금 시작해보세요!</h4>
+        </div>-->
+        <img
+          src="/imgs/메인1.png"
+        />
       </div>
       <div class="panel">
-        <img src="/imgs/메인2.png" />
+        <img
+          src="/imgs/메인2.png"
+        />
         <span class="top">&uarr;</span>
       </div>
       <div class="panel">
-        <img src="/imgs/메인3.png" /><span class="top">&uarr;</span>
+        <img
+          src="/imgs/메인3.png"
+        /><span class="top">&uarr;</span>
       </div>
       <div class="panel">five <span class="top">&uarr;</span></div>
     </div>
