--- a/FrontEnd/html/community_s.html
+++ b/FrontEnd/html/community_s.html
@@ -23,7 +23,7 @@
           <li onClick="location.href='/mypage'">마이페이지</li>
         </ol>
         <ol class="right-side">
-          <li class="login"><b>OOO님</b></li>
+          <li class="login"><b id="myname">OOO님</b></li>
 
           <li class="logout">로그아웃</li>
         </ol>
@@ -87,6 +87,7 @@
       </div>
     </div>
 
+    <script src="/js/navbar.js"></script>
     <script src="/js/logout.js"></script>
     <script src="/js/community_s.js"></script>
   </body>
