--- a/FrontEnd/html/journal_list.html
+++ b/FrontEnd/html/journal_list.html
@@ -22,7 +22,7 @@
           <li onClick="location.href='/mypage'">마이페이지</li>   
         </ol>
         <ol class="right-side">
-          <li class="login"><b>OOO님</b></li>
+          <li class="login"><b id="myname">OOO님</b></li>
           <li class="logout">로그아웃</li>
         </ol>
       </div>
@@ -100,7 +100,7 @@
       </div>
 
 
-
+      <script src="/js/navbar.js"></script>
       <script src="/js/logout.js"></script>
     <script src="/js/journal_list.js"></script>
   </body>
