--- a/FrontEnd/html/register.html
+++ b/FrontEnd/html/register.html
@@ -37,7 +37,7 @@
     </div>
 
 
-    
+    <!-- <script src="/js/navbar.js"></script> -->
     <script src="/js/register.js"></script>
   </body>
 </html>
