--- a/FrontEnd/html/community_n.html
+++ b/FrontEnd/html/community_n.html
@@ -23,7 +23,7 @@
           <li onClick="location.href='/mypage'">마이페이지</li>
         </ol>
         <ol class="right-side">
-          <li class="login"><b>OOO님</b></li>
+          <li class="login"><b id="myname">OOO님</b></li>
           <li class="logout">로그아웃</li>
         </ol>
       </div>
@@ -87,7 +87,8 @@
       </div>
     </div>
 
+    <script src="/js/navbar.js"></script>
     <script src="/js/logout.js"></script>
-    <script src="/js/community_s.js"></script>
+    <script src="/js/community_n.js"></script>
   </body>
 </html>
