--- a/FrontEnd/html/journal_checkList.html
+++ b/FrontEnd/html/journal_checkList.html
@@ -21,7 +21,7 @@
           <li onClick="location.href='/mypage'">마이페이지</li>
         </ol>
         <ol class="right-side">
-          <li class="login"><b>OOO님</b></li>
+          <li class="login"><b id="myname">OOO님</b></li>
           <li>로그아웃</li>
         </ol>
       </div>
@@ -52,165 +52,22 @@
         <div class="number"></div>
       </div>
 
-      <table>
+      <table id="test">
         <tr>
           <td id="name"><b>점검이름</b></td>
           <td id="method"><b>점검방법</b></td>
           <td id="check"><b>완료</b></td>
         </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
+
+        <!-- <tr>
+          <td class="name">test</td>
+          <td class="method">test2</td>
           <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
+            <input class="check-point" type="checkbox">
           </td>
-        </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
-          <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
-          <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
-          <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
-          <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
-          <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
-          <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td class="name">
-            애노우드 (실린더 헤드, 실린더 블록, 실린더 블록 써모스탯 부분, 오일
-            냉각수 커버, 배기 가이드)
-          </td>
-          <td class="method">필요 시 점검 및 교환</td>
-          <td class="check">
-            <div class="check-box">
-              <input
-                class="check-input"
-                value="submit"
-                type="checkbox"
-                name="check"
-                value="completed"
-                unchecked
-              />
-            </div>
-          </td>
-        </tr>
+        </tr> -->
       </table>
+
       <div class="date-submit">
         <div class="date">
           <input id="date-input" type="date" min="2022-01-01" />
@@ -222,6 +79,7 @@
     </div>
 
 
+    <script src="/js/navbar.js"></script>
     <script src="/js/logout.js"></script>
     <script src="/js/journal_checkList.js"></script>
   </body>
