--- a/FrontEnd/html/mypage.html
+++ b/FrontEnd/html/mypage.html
@@ -23,7 +23,7 @@
           <li onClick="location.href='/mypage'">마이페이지</li>
         </ol>
         <ol class="right-side">
-          <li class="login"><b>OOO님</b></li>
+          <li class="login"><b id="myname">OOO님</b></li>
           <li class="logout">로그아웃</li>
         </ol>
       </div>
@@ -52,11 +52,12 @@
 
 
         <button type="button" class="editPW">비밀번호 변경</button>
-        <button type="button">탈퇴</button>
+        <button type="button" class="delete">탈퇴</button>
 
       </div>
     </div>
 
+    <script src="/js/navbar.js"></script>
     <script src="/js/logout.js"></script>
     <script src="/js/mypage.js"></script>
   </body>
